package pt.ipp.isep.dei.esoft.project.repository;

import pt.ipp.isep.dei.esoft.project.domain.*;

import java.util.List;

public class Agenda {
    private List<AgendaEntry> entriesAgenda;
}
